tests/hulk/errors/syntactic/double_let.hulk
let let x = 5 in print(x);
